[gd_scene load_steps=4 format=2]

[ext_resource path="res://Codes/Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Tryout for theme.tres" type="Theme" id=2]
[ext_resource path="res://Models/Title.png" type="Texture" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 1.0
script = ExtResource( 1 )

[node name="Title" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -210.0
margin_right = 156.0
margin_bottom = 4.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Title"]
margin_right = 316.0
margin_bottom = 164.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = 40.0
margin_right = 250.0
margin_bottom = 108.0
mouse_filter = 2

[node name="Start" type="Button" parent="Buttons"]
margin_right = 500.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "Play"

[node name="Options" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 500.0
margin_bottom = 44.0
theme = ExtResource( 2 )
text = "Settings"

[node name="Exit" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 500.0
margin_bottom = 68.0
theme = ExtResource( 2 )
text = "Quit"

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0.819608, 0.803922, 1, 0.52549 )

[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
